[package]
name = "node-sysconf"
version = "3.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.63"
repository = "https://github.com/magiclen/node-sysconf"
homepage = "https://magiclen.org/node-sysconf/"
keywords = ["nodejs", "sysconf"]
categories = []
description = "Get configurable system variables."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
napi = "2"
napi-derive = "2"

libc = "0.2"

[build-dependencies]
napi-build = "2"